# class-raytracer

./: Box.hpp  CMakeLists.txt  Camera.hpp  Cylinder.hpp  Ellipsoid.hpp  QuadricCollection.hpp  README  RandomAASampler.hpp  Ray.hpp  SceneDescription.hpp  SceneObject.hpp  Sphere.hpp  consts.hpp  rayTracer.cpp  tests.cpp
src/: Light.hpp  Material.hpp  QuadricCollection.hpp  Ray.hpp  rayTracer.cpp
test/: tests.cpp
